Fix input_time deprecation warning by migrating to input_datetime
- Replace deprecated input_time with input_datetime integration
- Add has_time: true and has_date: false to schedule time inputs
- Update deployment.yaml to use input_datetime instead of input_time
- This resolves the 'Integration input_time not found' warning
- All schedule time inputs now use the modern input_datetime format

--- a/gitops/apps/home-assistant/deployment.yaml
+++ b/gitops/apps/home-assistant/deployment.yaml
@@ -151,7 +151,7 @@ spec:
               
               # Include schedule configuration
               input_boolean: !include schedule/schedule_input_boolean.yaml
-              input_time: !include schedule/schedule_input_time.yaml
+              input_datetime: !include schedule/schedule_input_time.yaml
               input_select: !include schedule/schedule_input_select.yaml
               
               # Shell commands for photo cleanup
