--- a/gitops/apps/home-assistant/schedule-configmap.yaml
+++ b/gitops/apps/home-assistant/schedule-configmap.yaml
@@ -347,54 +347,74 @@ data:
       #     scene_suffix: "energize"
 
   schedule_input_time.yaml: |
-    # Schedule time inputs
+    # Schedule time inputs using input_datetime
     schedule_1_start:
       name: "Morning Start Time"
       icon: mdi:weather-sunrise
+      has_time: true
+      has_date: false
       initial: "06:00"
     
     schedule_1_end:
       name: "Morning End Time"
       icon: mdi:weather-sunny
+      has_time: true
+      has_date: false
       initial: "09:00"
     
     schedule_2_start:
       name: "Day Start Time"
       icon: mdi:weather-sunny
+      has_time: true
+      has_date: false
       initial: "09:00"
     
     schedule_2_end:
       name: "Day End Time"
       icon: mdi:weather-sunset
+      has_time: true
+      has_date: false
       initial: "17:00"
     
     schedule_3_start:
       name: "Evening Start Time"
       icon: mdi:weather-sunset
+      has_time: true
+      has_date: false
       initial: "17:00"
     
     schedule_3_end:
       name: "Evening End Time"
       icon: mdi:weather-night
+      has_time: true
+      has_date: false
       initial: "21:00"
     
     schedule_4_start:
       name: "Night Start Time"
       icon: mdi:weather-night
+      has_time: true
+      has_date: false
       initial: "21:00"
     
     schedule_4_end:
       name: "Night End Time"
       icon: mdi:weather-night
+      has_time: true
+      has_date: false
       initial: "23:00"
     
     schedule_5_start:
       name: "Late Night Start Time"
       icon: mdi:weather-night
+      has_time: true
+      has_date: false
       initial: "23:00"
     
     schedule_5_end:
       name: "Late Night End Time"
       icon: mdi:weather-sunrise
+      has_time: true
+      has_date: false
       initial: "06:00"
 
