--- a/gitops/root-app.yaml
+++ b/gitops/root-app.yaml
@@ -428,6 +428,45 @@ spec:
         maxDuration: 3m
 
 ---
+# Infrastructure: Traefik Ingress Controller
+apiVersion: argoproj.io/v1alpha1
+kind: Application
+metadata:
+  name: infra-traefik
+  namespace: default
+  annotations:
+    argocd.argoproj.io/sync-wave: "1"  # Install early - needed for ingress
+  finalizers:
+    - resources-finalizer.argocd.argoproj.io/background
+spec:
+  project: default
+  sources:
+    - repoURL: https://traefik.github.io/charts
+      chart: traefik
+      targetRevision: 37.2.0
+      helm:
+        valueFiles:
+          - $values/gitops/infra/traefik/values.yaml
+    - repoURL: https://github.com/amerenda/amerenda-k3s.git
+      targetRevision: main
+      ref: values
+  destination:
+    server: https://kubernetes.default.svc
+    namespace: default
+  syncPolicy:
+    automated:
+      prune: true
+      selfHeal: true
+    syncOptions:
+      - PrunePropagationPolicy=foreground
+    retry:
+      limit: 5
+      backoff:
+        duration: 5s
+        factor: 2
+        maxDuration: 3m
+
+---
 # Infrastructure: External DNS
 apiVersion: argoproj.io/v1alpha1
 kind: Application
