--- a/gitops/infra/traefik/values.yaml
+++ b/gitops/infra/traefik/values.yaml
@@ -10,6 +10,9 @@ dashboard:
       external-dns.alpha.kubernetes.io/hostname: traefik.amer.home
       external-dns.alpha.kubernetes.io/ttl: "3600"
 
+# Replica count for high availability
+replicaCount: 2
+
 # Resource limits for Raspberry Pi
 resources:
   limits:
