--- a/gitops/infra/cert-manager/do-dns-secret.yaml
+++ b/gitops/infra/cert-manager/do-dns-secret.yaml
@@ -1,15 +1,15 @@
-apiVersion: external-secrets.io/v1
+apiVersion: external-secrets.io/v1beta1
 kind: ExternalSecret
 metadata:
   name: do-dns-api-key
   namespace: cert-manager
   annotations:
-    argocd.argoproj.io/sync-wave: "20"  # First - external secret must be created before cluster issuer
+    argocd.argoproj.io/sync-wave: "10"  # Very high sync wave - after cert-manager is fully bootstrapped
 spec:
   refreshInterval: 1h
   secretStoreRef:
-    name: bitwarden-secret-store
-    kind: SecretStore
+    name: bitwarden-secretstore
+    kind: ClusterSecretStore
   target:
     name: do-dns-api-key
     creationPolicy: Owner
