--- a/gitops/root-app.yaml
+++ b/gitops/root-app.yaml
@@ -380,7 +380,7 @@ spec:
       ref: values
   destination:
     server: https://kubernetes.default.svc
-    namespace: cert-manager
+    namespace: default
   syncPolicy:
     automated:
       prune: true
