--- a/gitops/infra/cert-manager/do-dns-secret.yaml
+++ b/gitops/infra/cert-manager/do-dns-secret.yaml
@@ -2,7 +2,7 @@ apiVersion: external-secrets.io/v1
 kind: ExternalSecret
 metadata:
   name: do-dns-api-key
-  namespace: cert-manager
+  namespace: default
   annotations:
     argocd.argoproj.io/sync-wave: "10"  # Very high sync wave - after cert-manager is fully bootstrapped
 spec:
