--- a/gitops/infra/cert-manager/certificates.yaml
+++ b/gitops/infra/cert-manager/certificates.yaml
@@ -3,7 +3,7 @@ apiVersion: cert-manager.io/v1
 kind: Certificate
 metadata:
   name: amer-dev-wildcard
-  namespace: cert-manager
+  namespace: default
   annotations:
     argocd.argoproj.io/sync-wave: "22"  # After ClusterIssuer is created
 spec:
@@ -21,7 +21,7 @@ apiVersion: cert-manager.io/v1
 kind: Certificate
 metadata:
   name: amerenda-dev-wildcard
-  namespace: cert-manager
+  namespace: default
   annotations:
     argocd.argoproj.io/sync-wave: "22"  # After ClusterIssuer is created
 spec:
