--- a/gitops/infra/cert-manager/values.yaml
+++ b/gitops/infra/cert-manager/values.yaml
@@ -4,7 +4,7 @@
 # Global configuration
 global:
   leaderElection:
-    namespace: cert-manager
+    namespace: default
 
 # Install CRDs automatically
 installCRDs: true
