--- a/gitops/infra/cert-manager/cluster-issuer.yaml
+++ b/gitops/infra/cert-manager/cluster-issuer.yaml
@@ -2,6 +2,7 @@ apiVersion: cert-manager.io/v1
 kind: ClusterIssuer
 metadata:
   name: letsencrypt-prod
+  namespace: default
   annotations:
     argocd.argoproj.io/sync-wave: "21"  # After the external secret is created
 spec:
@@ -16,6 +17,8 @@ spec:
           tokenSecretRef:
             name: do-dns-api-key
             key: api-key
+          propagationTimeout: 300s
+          pollingInterval: 30s
       selector:
         dnsNames:
         - "*.alexmerenda.dev"
