--- a/gitops/apps/home-assistant/ingress.yaml
+++ b/gitops/apps/home-assistant/ingress.yaml
@@ -7,6 +7,7 @@ metadata:
     traefik.ingress.kubernetes.io/router.entrypoints: web
     external-dns.alpha.kubernetes.io/hostname: home.amer.home,ha.amer.home,homeassistant.amer.home
     external-dns.alpha.kubernetes.io/ttl: "3600"
+    external-dns.alpha.kubernetes.io/manage-record-types: "A"
 spec:
   ingressClassName: infra-traefik
   rules:
