--- a/gitops/apps/home-assistant/deployment.yaml
+++ b/gitops/apps/home-assistant/deployment.yaml
@@ -217,6 +217,7 @@ spec:
                 - NET_ADMIN
                 - NET_RAW
                 - NET_BROADCAST
+                - SYS_ADMIN
           resources:
             requests:
               memory: "512Mi"
