--- a/gitops/infra/dns/configmap.yaml
+++ b/gitops/infra/dns/configmap.yaml
@@ -3,6 +3,8 @@ kind: ConfigMap
 metadata:
   name: bind9-config
   namespace: default
+  annotations:
+    reloader.stakater.com/auto: "true"
 data:
   named.conf: |
     options {
