--- a/gitops/apps/home-assistant/deployment.yaml
+++ b/gitops/apps/home-assistant/deployment.yaml
@@ -16,6 +16,17 @@ spec:
         app: homeassistant
     spec:
       hostNetwork: true
+      dnsPolicy: "None"
+      dnsConfig:
+        nameservers:
+          - "10.100.20.241"
+        searches:
+          - "amer.home"
+          - "merenda.home.arpa"
+        options:
+          - name: "ndots"
+            value: "2"
+          - name: "edns0"
       initContainers:
         - name: install-hacs
           image: alpine:3.20
