Enable schedule system for all switch control automations
- Add use_dashboard_schedule: true to all switch control automations
- Add room_name configuration for each room (bathroom, kitchen, bedroom, hallway)
- Living room was already configured with schedule support
- All rooms now support time-based scene selection when lights are turned on
- Regenerate ConfigMaps with updated automation configurations

--- a/gitops/apps/home-assistant/automations/switch_control_kitchen.yaml
+++ b/gitops/apps/home-assistant/automations/switch_control_kitchen.yaml
@@ -24,3 +24,6 @@ use_blueprint:
     brightness_step: 25
     min_brightness: 1
     max_brightness: 255
+    # Room configuration for dynamic scene construction
+    room_name: "kitchen"
+    use_dashboard_schedule: true
