--- a/gitops/apps/home-assistant/automations-configmap.yaml
+++ b/gitops/apps/home-assistant/automations-configmap.yaml
@@ -249,6 +249,9 @@ data:
         brightness_step: 25
         min_brightness: 1
         max_brightness: 255
+        # Room configuration for dynamic scene construction
+        room_name: "bathroom"
+        use_dashboard_schedule: true
 
   switch_control_bedroom.yaml: |
     alias: Switch Control - Bedroom
@@ -277,6 +280,9 @@ data:
         brightness_step: 25
         min_brightness: 1
         max_brightness: 255
+        # Room configuration for dynamic scene construction
+        room_name: "bedroom"
+        use_dashboard_schedule: true
 
   switch_control_hallway.yaml: |
     alias: Switch Control - Hallway
@@ -305,6 +311,9 @@ data:
         brightness_step: 25
         min_brightness: 1
         max_brightness: 255
+        # Room configuration for dynamic scene construction
+        room_name: "hallway"
+        use_dashboard_schedule: true
 
   switch_control_kitchen.yaml: |
     alias: Switch Control - Kitchen
@@ -333,6 +342,9 @@ data:
         brightness_step: 25
         min_brightness: 1
         max_brightness: 255
+        # Room configuration for dynamic scene construction
+        room_name: "kitchen"
+        use_dashboard_schedule: true
 
   switch_control_living_room.yaml: |
     alias: Switch Control - Living Room
