Fix schedule dashboard configuration
- Update dashboard entities from input_time to input_datetime
- Create schedule_dashboard_view.yaml for proper dashboard format
- Fix entity references to match the updated input_datetime configuration
- Dashboard should now load properly with correct entity references
- Regenerate ConfigMaps with corrected dashboard configuration

--- a/gitops/apps/home-assistant/config/schedule_dashboard_view.yaml
+++ b/gitops/apps/home-assistant/config/schedule_dashboard_view.yaml
@@ -1,5 +1,5 @@
-# Dashboard configuration for schedule management
-# Add this to your Home Assistant dashboard
+# Schedule Dashboard View
+# This creates a dashboard view for schedule management
 
 title: "Light Schedule Control"
 path: schedule-control
