--- a/gitops/apps/home-assistant/config/room_schedule_select.yaml
+++ b/gitops/apps/home-assistant/config/room_schedule_select.yaml
@@ -1,74 +1,4 @@
-schedule_1_scene:
-  name: "Morning Scene"
-  icon: mdi:weather-sunrise
-  options:
-    - "energize"
-    - "concentrate"
-    - "relax"
-    - "nightlight"
-    - "read"
-    - "dimmed"
-  initial: "energize"
-
-schedule_2_scene:
-  name: "Day Scene"
-  icon: mdi:weather-sunny
-  options:
-    - "energize"
-    - "concentrate"
-    - "relax"
-    - "nightlight"
-    - "read"
-    - "dimmed"
-  initial: "concentrate"
-
-schedule_3_scene:
-  name: "Evening Scene"
-  icon: mdi:weather-sunset
-  options:
-    - "energize"
-    - "concentrate"
-    - "relax"
-    - "nightlight"
-    - "read"
-    - "dimmed"
-  initial: "relax"
-
-schedule_4_scene:
-  name: "Night Scene"
-  icon: mdi:weather-night
-  options:
-    - "energize"
-    - "concentrate"
-    - "relax"
-    - "nightlight"
-    - "read"
-    - "dimmed"
-  initial: "nightlight"
-
-schedule_5_scene:
-  name: "Late Night Scene"
-  icon: mdi:weather-night
-  options:
-    - "energize"
-    - "concentrate"
-    - "relax"
-    - "nightlight"
-    - "read"
-    - "dimmed"
-  initial: "nightlight"
-
-default_scene:
-  name: "Default Scene"
-  icon: mdi:lightbulb
-  options:
-    - "energize"
-    - "concentrate"
-    - "relax"
-    - "nightlight"
-    - "read"
-    - "dimmed"
-  initial: "relax"input_select:
+input_select:
   living_room_schedule_1_scene:
     name: "Living Room Morning Scene"
     icon: mdi:weather-sunrise
