Fix YAML syntax by adding proper newlines between merged sections

--- a/gitops/apps/home-assistant/config/schedule_input_select.yaml
+++ b/gitops/apps/home-assistant/config/schedule_input_select.yaml
@@ -68,7 +68,9 @@ default_scene:
     - "nightlight"
     - "read"
     - "dimmed"
-  initial: "relax"input_select:
+  initial: "relax"
+
+input_select:
   living_room_schedule_1_scene:
     name: "Living Room Morning Scene"
     icon: mdi:weather-sunrise
