Add per-room schedule dashboard with room selector
- Create room_schedule_dashboard.yaml with dropdown room selector
- Add room_schedule_selector input_select helper
- Dashboard shows all room schedule settings in one place
- Includes enable/disable toggles, time settings, and scene selectors
- Added comprehensive instructions for per-room configuration

--- a/gitops/apps/home-assistant/config/schedule_input_select.yaml
+++ b/gitops/apps/home-assistant/config/schedule_input_select.yaml
@@ -1,4 +1,16 @@
 input_select:
+  room_schedule_selector:
+    name: "Select Room to Configure"
+    icon: mdi:home-edit
+    options:
+      - "none"
+      - "living_room"
+      - "kitchen"
+      - "bedroom"
+      - "bathroom"
+      - "hallway"
+    initial: "none"
+
   schedule_1_scene:
     name: "Morning Scene"
     icon: mdi:weather-sunrise
