--- a/gitops/apps/home-assistant/deployment.yaml
+++ b/gitops/apps/home-assistant/deployment.yaml
@@ -157,10 +157,8 @@ spec:
               script: !include scripts.yaml
               scene: !include scenes.yaml
               
-              # Include schedule configuration
-              input_boolean: !include schedule/schedule_input_boolean.yaml
-              input_datetime: !include schedule/schedule_input_time.yaml
-              input_select: !include schedule/schedule_input_select.yaml
+# Include schedule configuration
+!include schedule/schedule_config.yaml
               
               
               # HTTP configuration for reverse proxy
